added method call()