@@ -9,36 +9,40 @@ import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.concurrent.Callable;
 
-@CommandLine.Command(name = "file-copier",mixinStandardHelpOptions = true, version = "fcu 1.0",
-        description = "File copier")
+@CommandLine.Command(
+    name = "fcu",
+    mixinStandardHelpOptions = true,
+    version = "fcu 1.0",
+    description = "Copies a source file to a destination directory.")
+
 public class FileCopier implements Callable<Integer> {
 
-  @CommandLine.Parameters(index = "0", description = "File name")
-  String fileName;
+  @CommandLine.Parameters(index = "0", description = "The source file to copy.")
+  String sourcePath = "/home/coder/checking/original";
 
-//
-//  @Override
-//  public void run(){
-//    isExists();
-//    try {
-//      Files.copy(Path.of(SOURCE_PATH), Paths.get(COPY_PATH,"gitIgnoreCopy.txt"), StandardCopyOption.REPLACE_EXISTING);
-//    }
-//    catch (IOException e) {
-//      throw new RuntimeException(e);
-//    }
-//
-//  }
-//  public boolean isExists() {
-//    return Files.exists(Paths.get(SOURCE_PATH)) && Files.isRegularFile(Paths.get(SOURCE_PATH));
-//  }
+  @CommandLine.Parameters(index = "1", description = "Copy File name")
+  String copyPath = "/home/coder/checking/copy";
+
+  public void getCopy() {
+    isExists();
+    try {
+      Files.copy(Path.of(sourcePath), Paths.get(copyPath, "copy.txt"), StandardCopyOption.REPLACE_EXISTING);
+    }
+    catch (IOException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  public boolean isExists() {
+    return Files.exists(Paths.get(sourcePath)) && Files.isRegularFile(Paths.get(sourcePath));
+  }
 
   @Override
   public Integer call() throws Exception {
-    // method call
-    System.out.println(fileName + " This is my file");
-
+    getCopy();
     return 0;
   }
+
   public static void main(String... args) {
     int exitCode = new CommandLine(new FileCopier()).execute(args);
     System.exit(exitCode);
